# tooscut

./: .cta.json  .gitignore  .oxfmtrc.json  .oxlintrc.json  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  knip.json  oxlint.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vercel.json
.beads/: .gitignore  issues.jsonl
.github/workflows/: ci.yml  cla.yml
apps/ui/: .cta.json  components.json  package.json  tsconfig.json  vercel.json  vite.config.ts
apps/ui/public/transitions/: Fade.webm  FlipH.webm  FlipV.webm  RotateCcw.webm  RotateCw.webm  SlideDown.webm  SlideLeft.webm  SlideRight.webm  SlideUp.webm  WipeDown.webm  WipeLeft.webm  WipeRight.webm  WipeUp.webm  ZoomIn.webm  ZoomOut.webm
apps/ui/src/: globals.d.ts  routeTree.gen.ts  styles.css  vite-env.d.ts
apps/ui/src/components/: Header.tsx  cta.tsx  faqs-section.tsx  feature-section.tsx  footer.tsx  header.tsx  hero.tsx  logo.tsx
apps/ui/src/components/editor/: asset-panel.tsx  audio-effects-properties.tsx  audio-meter.tsx  audio-properties.tsx  effect-properties.tsx  eq-visualizer.tsx  export-dialog.tsx  font-picker.tsx  keyboard-shortcuts-modal.tsx  keyframe-button.tsx  keyframe-input.tsx  line-properties.tsx  picture-properties.tsx  playback-controls.tsx  preview-panel.tsx  project-settings-dialog.tsx  properties-panel.tsx  property-shared.tsx  shape-panel.tsx  shape-properties.tsx  text-panel.tsx  text-properties.tsx  timeline-panel.tsx  toolbar.tsx  transition-panel.tsx  transition-properties.tsx  video-editor-layout.tsx
apps/ui/src/components/timeline/: canvas-timeline.tsx  clip-node.tsx  clip-renderer.tsx  constants.ts  cross-transition-overlays.tsx  grid-lines-track-area.tsx  keyframe-curve-editor.tsx  konva-icons.tsx  snap-utils.ts  thumbnail-cache.ts  timeline-stage.tsx  timeline-toolbar.tsx  track-backgrounds.tsx  track-headers.tsx  track-layout.ts  types.ts  use-asset-store.ts  use-clip-thumbnails.ts  use-clip-waveform.ts  use-timeline-store.ts  waveform-display.tsx
apps/ui/src/components/ui/: accordion.tsx  button.tsx  color-input.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  empty.tsx  full-width-divider.tsx  input.tsx  menubar.tsx  navigation-menu.tsx  popover.tsx  (+12 more)
apps/ui/src/hooks/: use-audio-engine.ts  use-auto-save.ts  use-mp4-export.ts
apps/ui/src/lib/: analytics.ts  cube-parser.ts  font-service.ts  frame-renderer-pool.ts  keyframe-utils.ts  layer-builder.ts  lut-manager.ts
apps/ui/src/routes/: __root.tsx  index.tsx  projects.tsx
apps/ui/src/state/: db.ts  font-store.ts  video-editor-store.ts
apps/ui/src/workers/: audio-render.worker.ts  compositor-api.ts  compositor.worker.ts  frame-renderer.worker.ts  waveform-api.ts  waveform.worker.ts
crates/: Cargo.toml  ERR  README.md  build.sh
crates/audio-engine/: Cargo.toml
crates/audio-engine/src/: clip.rs  lib.rs  mixer.rs  source.rs  time_stretcher.rs  track.rs  transition.rs
crates/audio-engine/src/effects/: biquad.rs  compressor.rs  eq.rs  mod.rs  noise_gate.rs  reverb.rs
crates/compositor/: Cargo.toml
crates/compositor/src/: color_grading_shader.rs  color_grading_uniforms.rs  compositor.rs  error.rs  lib.rs  pipeline.rs  shape_pipeline.rs  text.rs  texture.rs  uniforms.rs
crates/keyframe/: Cargo.toml
crates/keyframe/src/: evaluator.rs  lib.rs
crates/types/: Cargo.toml
crates/types/src/: color.rs  color_grading.rs  easing.rs  effects.rs  keyframe.rs  layer.rs  lib.rs  shape.rs  text.rs  transform.rs  transition.rs
scripts/: vercel-install.sh
signatures/: cla.json
(+21 files in other folders)
